# openai-proxy

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  connect.py  pyproject.toml  requirements.txt  subscription_codex.py
app/: codex_service-0.py  codex_service.py  config.py  main.py  schemas.py  utils.py
tests/: test_utils.py
