[project]
name = "local-codex-openai-proxy"
version = "0.1.0"
description = "A local OpenAI-compatible FastAPI proxy backed by Codex ChatGPT authentication."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "pydantic>=2.10,<3",
  "openai-codex",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8,<9",
  "ruff>=0.11,<1",
]

[tool.ruff]
line-length = 88
